--- a/Graphite.css
+++ b/Graphite.css
@@ -1,4 +1,4 @@
-html.normal {
+html {
     color: #fff;
     background-color: #000;
     font: 11px/1.1em 'Lucida Grande' sans-serif;
@@ -6,16 +6,16 @@ html.normal {
     padding: 0;
 }
 
-body.normal .sender[type=myself]:hover:before {
+.sender[type=myself]:hover:before {
     content: "• ";
     color: #bebebe;
 }
 
-body.normal a img {
+a img {
     border: 0;
 }
 
-body.normal img {
+img {
     display: block;
     padding-top: 5px;
     padding-bottom: 5px;
@@ -23,15 +23,15 @@ body.normal img {
     max-width: 95%;
 }
 
-body.normal a:link, a:visited, a:hover, a:active {
+a:link, a:visited, a:hover, a:active {
     color: #5c94d3;
 }
 
-body.normal .text span {
+.text span {
     display: block;
 }
 
-body.normal .line {
+.line {
     padding: 0;
     margin: 0;
     background-color: #000;
@@ -39,26 +39,26 @@ body.normal .line {
     line-height: 130%;
 }
 
-body.normal .event {
+.event {
     padding: 0.2em;
     margin: 0;
     color: #ccc;
     background: #201f27;
 }
 
-body.normal .event + .event {
+.event + .event {
     border-top: #2d2c37 1px solid;
 }
 
-body.normal .text span.message {
+.text span.message {
     border-bottom: #2d2c37 1px solid;
 }
 
-body.normal .text + .event {
+.text + .event {
     margin-top: -1px;
 }
 
-body.normal .sender {
+.sender {
     padding: 0.4em 0;
     float: left;
     text-align: right;
@@ -67,7 +67,18 @@ body.normal .sender {
     overflow: hidden;
 }
 
-body.normal .line .message {
+.place {
+    padding: 0;
+    float: left;
+    text-align: left;
+    font-weight: bold;
+    width: 120px;
+    overflow: hidden;
+}
+
+.place { color: #3387bc; }
+
+.line .message {
     margin: 0 0 0 134px;
     padding: 0.4em;
     color: #fff;
@@ -75,7 +86,7 @@ body.normal .line .message {
     background-color: #000000;
 }
 
-body.normal .event .message {
+.event .message {
     margin: 0;
     padding: 0.4em;
     border: 0;
@@ -84,7 +95,7 @@ body.normal .event .message {
     font: bold 11px "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
 
-body.normal .line .time {
+.line .time {
     float: right;
     margin-right: 6px;
     margin-top: 5px;
@@ -93,14 +104,19 @@ body.normal .line .time {
     font: bold 11px "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
 
-body.normal .line .place {
-    display: block;
-    color: #999;
-    margin: 0;
-    font-size: 12px;
+body.console .sender {
+	width: 70px;
 }
 
-body.normal .event .time {
+body.console .line .message {
+	margin-left: 194px;
+}
+
+body.console .event .message {
+	margin: 0;
+}
+
+.event .time {
     margin: 1px 3px;
     float: right;
     text-align: right;
@@ -108,22 +124,22 @@ body.normal .event .time {
     color: #a6b9c0;
 }
 
-body.normal .line[highlight=true] span.message {
+.line[highlight=true] span.message {
     background-color: #383744;
     color: #fff;
     margin: 0;
 }
 
-body.normal .line[highlight=true] .time {
+.line[highlight=true] .time {
     color: #fff;
 }
 
-body.normal .member {
+.member {
     text-decoration: none !important;
     color: inherit !important;
 }
 
-body.normal .member:hover {
+.member:hover {
     text-decoration: underline;
 }
 
@@ -147,7 +163,7 @@ body[type=console] {
     color:#000;
 }
 
-body.normal hr {
+hr {
     margin: 0;
     padding: 2px;
     border: none;
@@ -172,35 +188,34 @@ a {
     content: "";
 }
 
-body.normal .line[type=action] .sender {
+.line[type=action] .sender {
     font-style: italic;
     color: #00d20e !important;
     background-color: #2d2d2d;
 }
 
-body.normal .line[type=action] .message {
-    /*background: #2d2c37;*/
+.line[type=action] .message {
     color: #00d20e;
     border-left: none;
     margin: 0 0 0 130px;
     background-color: #2d2d2d;
 }
 
-body.normal .url {
+.url {
     word-break: break-all;
 }
 
-body.normal .address {
+.address {
     text-decoration: underline;
     word-break: break-all;
 }
 
-body.normal .highlight {
+.highlight {
     color: #fff;
     font-weight: bold;
 }
 
-body.normal .line[highlight=true] .sender {
+.line[highlight=true] .sender {
     background-color: #383744;
     padding: 0.4em;
     color: #fff;
@@ -208,164 +223,164 @@ body.normal .line[highlight=true] .sender {
 
 /* nickname for text messages */
 
-body.normal .sender[type=myself] {
+.sender[type=myself] {
     color: #FF1676;
 }
 
-body.normal .sender[type=normal] {
+.sender[type=normal] {
     color: #ccc;
 }
 
-body.normal .sender[type=normal][colornumber='0'] {
+.sender[type=normal][colornumber='0'] {
     color: red;
 }
 
-body.normal .sender[type=normal][colornumber='1'] {
+.sender[type=normal][colornumber='1'] {
     color: #636aff;
 }
 
-body.normal .sender[type=normal][colornumber='2'] {
+.sender[type=normal][colornumber='2'] {
     color: #00BA00;
 }
 
-body.normal .sender[type=normal][colornumber='3'] {
+.sender[type=normal][colornumber='3'] {
     color: #C083F2;
 }
 
-body.normal .sender[type=normal][colornumber='4'] {
+.sender[type=normal][colornumber='4'] {
     color: #4DEDF0;
 }
 
-body.normal .sender[type=normal][colornumber='5'] {
+.sender[type=normal][colornumber='5'] {
     color : #E422B2;
 }
 
-body.normal .sender[type=normal][colornumber='6'] {
+.sender[type=normal][colornumber='6'] {
     color: #EAE87E;
 }
 
-body.normal .sender[type=normal][colornumber='7'] {
+.sender[type=normal][colornumber='7'] {
     color: #B8DFFF;
 }
 
-body.normal .sender[type=normal][colornumber='8'] {
+.sender[type=normal][colornumber='8'] {
     color: #75A1FB;
 }
 
-body.normal .sender[type=normal][colornumber='9'] {
+.sender[type=normal][colornumber='9'] {
     color: #97C74B;
 }
 
-body.normal .sender[type=normal][colornumber='10'] {
+.sender[type=normal][colornumber='10'] {
     color: #A5EAC4;
 }
 
-body.normal .sender[type=normal][colornumber='11'] {
+.sender[type=normal][colornumber='11'] {
     color: #FFA6A0;
 }
 
-body.normal .sender[type=normal][colornumber='12'] {
+.sender[type=normal][colornumber='12'] {
     color: #8E67E7;
 }
 
-body.normal .sender[type=normal][colornumber='13'] {
+.sender[type=normal][colornumber='13'] {
     color: #FFBB58;
 }
 
-body.normal .sender[type=normal][colornumber='14'] {
+.sender[type=normal][colornumber='14'] {
     color: #EDD7AD;
 }
 
-body.normal .sender[type=normal][colornumber='15'] {
+.sender[type=normal][colornumber='15'] {
     
 }
 
 /* message body */
 
-body.normal .message[type=system] {
+.message[type=system] {
     color: #303030;
 }
 
-body.normal .message[type=error] {
+.message[type=error] {
     color: #d14025;
     font-weight: bold;
 }
 
-body.normal .message[type=reply] {
+.message[type=reply] {
     color: #a6b9c0;
 }
 
-body.normal .message[type=error_reply] {
+.message[type=error_reply] {
     color: #d33b54;
 }
 
-body.normal .message[type=dcc_send_send] {
+.message[type=dcc_send_send] {
     color: #a6b9c0;
 }
 
-body.normal .message[type=dcc_send_receive] {
+.message[type=dcc_send_receive] {
     color: #153b7c;
 }
 
-body.normal .message[type=privmsg] {
+.message[type=privmsg] {
     
 }
 
-body.normal .message[type=notice] {
+.message[type=notice] {
     color: #888;
 }
 
-body.normal .message[type=action] {
+.message[type=action] {
     color: #303030;
     font-style: italic;
     font-weight: bold;
 }
 
-body.normal .message[type=join] {
+.message[type=join] {
     color: #a6b9c0;
 }
 
-body.normal .message[type=part] {
+.message[type=part] {
     color: #a6b9c0;
 }
 
-body.normal .message[type=kick] {
+.message[type=kick] {
     color: #303030;
 }
 
-body.normal .message[type=quit] {
+.message[type=quit] {
     color: #a6b9c0;
 }
 
-body.normal .message[type=kill] {
+.message[type=kill] {
     color: #a6b9c0;
 }
 
-body.normal .message[type=nick] {
+.message[type=nick] {
     color: #a6b9c0;
 }
 
-body.normal .message[type=mode] {
+.message[type=mode] {
     color: #a6b9c0;
 }
 
-body.normal .message[type=topic] {
+.message[type=topic] {
     color: #a6b9c0;
 }
 
-body.normal .message[type=invite] {
+.message[type=invite] {
     color: #a6b9c0;
 }
 
-body.normal .message[type=wallops] {
+.message[type=wallops] {
     color: #a6b9c0;
 }
 
-body.normal .message[type=debug_send] {
+.message[type=debug_send] {
     color: #aaa;
 }
 
-body.normal .message[type=debug_receive] {
+.message[type=debug_receive] {
     color: #444;
 }
 
