--- a/Graphite.css
+++ b/Graphite.css
@@ -31,6 +31,10 @@ a:link, a:visited, a:hover, a:active {
     display: block;
 }
 
+.text .message span {
+    display: inline;
+}
+
 .line {
     padding: 0;
     margin: 0;
