Fix size of right-floated place names in log

--- a/Graphite.css
+++ b/Graphite.css
@@ -119,6 +119,7 @@ a:link, a:visited, a:hover, a:active {
 .line .place {
     float: right;
     text-align: right;
+    width: auto;
 }
 
 body.console .event[type=join], body.console .event[type=part], body.console .event[type=quit], body.console .event[type=mode], body.console .event[type=nick] {
