--- a/Graphite.css
+++ b/Graphite.css
@@ -403,15 +403,17 @@ a {
 }
 
 #topic {
-  background-color: #EEE;
-  border-bottom: 1px solid #999;
-  top-color: #FFF;
-  bottom-color: #EEE;
-  padding: 2px 0;
+  color: #fff;
+  background-color: #333;
+  border-bottom: 1px solid #181818;
+  top-color: #555;
+  bottom-color: #181818;
+  padding: 5px 0 7px 0;
   margin: 0;
-  height: 16px;
+  /* height: 16px; */
   width: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
+  line-height: 130%;
   cursor: pointer;
   position: fixed;
   top: 0;
